--- a/my_portfolio/index.html
+++ b/my_portfolio/index.html
@@ -43,10 +43,10 @@
       <h2 class="fw-bold text-center mb-4">Skills</h2>
       <div class="row">
         <div class="col-md-6">
-          <p>HTML5</p>
+          <p>HTML</p>
           <div class="progress mb-3"><div class="progress-bar bg-success" style="width:90%"></div></div>
 
-          <p>CSS3</p>
+          <p>CSS</p>
           <div class="progress mb-3"><div class="progress-bar bg-info" style="width:85%"></div></div>
 
           <p>JavaScript</p>
